--- a/interior_quotation_system/package.json
+++ b/interior_quotation_system/package.json
@@ -18,6 +18,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -25,7 +26,7 @@
     "reactstrap": "^9.2.1",
     "sass": "^1.69.7",
     "simple-react-validator": "^1.6.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
