--- a/interior_quotation_system/package.json
+++ b/interior_quotation_system/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.9.2",
