--- a/interior_quotation_system/package.json
+++ b/interior_quotation_system/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "query-string": "^9.0.0",
