--- a/interior_quotation_system/package.json
+++ b/interior_quotation_system/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
@@ -33,7 +34,8 @@
     "reactstrap": "^9.2.1",
     "sass": "^1.69.7",
     "simple-react-validator": "^1.6.2",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
