--- a/interior_quotation_system/package.json
+++ b/interior_quotation_system/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
+    "prop-types": "^15.8.1",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -28,7 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-joyride": "^2.7.2",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.3",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.1",
