--- a/interior_quotation_system/package.json
+++ b/interior_quotation_system/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
@@ -29,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-joyride": "^2.7.2",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.4",
